{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 56,
  "lineage": "f686c662-2761-aac3-417a-55849a38cf5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cd9d30d8d3123d14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-25-54-17.compute-1.amazonaws.com",
            "public_ip": "100.25.54.17",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:internet-gateway/igw-0a66264fef0fa3050",
            "id": "igw-0a66264fef0fa3050",
            "owner_id": "450183644535",
            "tags": {
              "Enviornment": "chris-environment",
              "Name": "chris-tf-igw"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd9d30d8d3123d14",
            "id": "nat-035a7bc24b95f93ce",
            "network_interface_id": "eni-0678bb41e34526e8d",
            "private_ip": "10.0.1.250",
            "public_ip": "100.25.54.17",
            "subnet_id": "subnet-0179e4a2eec3ebd91",
            "tags": {
              "Name": "chris-tf-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:route-table/rtb-01ec48db927ce4ce2",
            "id": "rtb-01ec48db927ce4ce2",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035a7bc24b95f93ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chris-tf-private-table"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:route-table/rtb-032c112679c91c361",
            "id": "rtb-032c112679c91c361",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a66264fef0fa3050",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chris-tf-public-table"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab6bdd7b05a44e82",
            "route_table_id": "rtb-01ec48db927ce4ce2",
            "subnet_id": "subnet-0c637f903dcf7082b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.priv-rt",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082a9adf730562c7",
            "route_table_id": "rtb-01ec48db927ce4ce2",
            "subnet_id": "subnet-055742824612ef043"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.priv-rt",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-5",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd2093a0f80c92fd",
            "route_table_id": "rtb-01ec48db927ce4ce2",
            "subnet_id": "subnet-0050f4e33b1651e31"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.priv-rt",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-6",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cee0ffbabb94c49",
            "route_table_id": "rtb-032c112679c91c361",
            "subnet_id": "subnet-0179e4a2eec3ebd91"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0910544b51b5eec65",
            "route_table_id": "rtb-032c112679c91c361",
            "subnet_id": "subnet-048632f5c86579a11"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007a6d664daf633a9",
            "route_table_id": "rtb-032c112679c91c361",
            "subnet_id": "subnet-083cab2a9c84c6715"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_subnet.subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-0179e4a2eec3ebd91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0179e4a2eec3ebd91",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "tags": {
              "Name": "public--tf-subnet-1"
            },
            "tags_all": {
              "Name": "public--tf-subnet-1"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-048632f5c86579a11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-048632f5c86579a11",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "tags": {
              "Name": "public-tf-subnet-2"
            },
            "tags_all": {
              "Name": "public-tf-subnet-2"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-083cab2a9c84c6715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-083cab2a9c84c6715",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450183644535",
            "tags": {
              "Name": "public-tf-subnet-3"
            },
            "tags_all": {
              "Name": "public-tf-subnet-3"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-0c637f903dcf7082b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0c637f903dcf7082b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "tags": {
              "Name": "chris-tf-private-subnet"
            },
            "tags_all": {
              "Name": "chris-tf-private-subnet"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-055742824612ef043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/24",
            "id": "subnet-055742824612ef043",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "tags": {
              "Name": "chris-tf-private-subnet-2"
            },
            "tags_all": {
              "Name": "chris-tf-private-subnet-2"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-0050f4e33b1651e31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/24",
            "id": "subnet-0050f4e33b1651e31",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "tags": {
              "Name": "chris-tf-private-subnet-3"
            },
            "tags_all": {
              "Name": "chris-tf-private-subnet-3"
            },
            "vpc_id": "vpc-0adb967a7ed7ae967"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:vpc/vpc-0adb967a7ed7ae967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca4886d632868ad4",
            "default_route_table_id": "rtb-0f1f70f32f6335f76",
            "default_security_group_id": "sg-04a0b012f337ce008",
            "dhcp_options_id": "dopt-0cfe42d52ad0bd6aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0adb967a7ed7ae967",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1f70f32f6335f76",
            "owner_id": "450183644535",
            "tags": {
              "Name": "chrise-tf-vpc"
            },
            "tags_all": {
              "Name": "chrise-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}